--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Hello, World!！！！！！！！！！
+  <div id="text">Hello, World!！！！！！！！！！！</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
