--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div id="text">Hello, World!！！！！！！！！！！</div>
+  <div id="text">Hello, World!！！！！！！！！！！！</div>
 
   <script src="script.js"></script>
 </body>
