エフェクト追加

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
   <div id="text">Hello, World!！！！！！！！！！！！</div>
 
-  <script src="script.js"></script>
+  <!-- 桜コンテナ -->
+  <div class="sakura-container"></div>
+
+  <script src="./script.js"></script>
 </body>
 </html>
